Fix font size radios spacing

--- a/src/components/GenomeFont/GenomeFont.module.scss
+++ b/src/components/GenomeFont/GenomeFont.module.scss
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: $spacer-xl;
   }
 
   .textarea {
